@@ -473,6 +473,8 @@ argument_list|,
 literal|true
 argument_list|,
 literal|null
+argument_list|,
+literal|null
 argument_list|)
 return|;
 block|}
@@ -504,6 +506,8 @@ argument_list|,
 literal|true
 argument_list|,
 literal|null
+argument_list|,
+literal|null
 argument_list|)
 return|;
 block|}
@@ -531,6 +535,40 @@ argument_list|,
 literal|false
 argument_list|,
 literal|null
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+comment|/** Expert: returns an IndexReader reading the index in the given    * {@link IndexCommit}.    * @param commit the commit point to open    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    */
+DECL|method|open
+specifier|public
+specifier|static
+name|IndexReader
+name|open
+parameter_list|(
+specifier|final
+name|IndexCommit
+name|commit
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+return|return
+name|open
+argument_list|(
+name|commit
+operator|.
+name|getDirectory
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+literal|null
+argument_list|,
+name|commit
 argument_list|)
 return|;
 block|}
@@ -561,6 +599,43 @@ argument_list|,
 literal|false
 argument_list|,
 name|deletionPolicy
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+comment|/** Expert: returns an IndexReader reading the index in the given    * Directory, using a specific commit and with a custom {@link IndexDeletionPolicy}.    * @param commit the specific {@link IndexCommit} to open;    * see {@link IndexReader#listCommits} to list all commits    * in a directory    * @param deletionPolicy a custom deletion policy (only used    *  if you use this reader to perform deletes or to set    *  norms); see {@link IndexWriter} for details.    * @throws CorruptIndexException if the index is corrupt    * @throws IOException if there is a low-level IO error    */
+DECL|method|open
+specifier|public
+specifier|static
+name|IndexReader
+name|open
+parameter_list|(
+specifier|final
+name|IndexCommit
+name|commit
+parameter_list|,
+name|IndexDeletionPolicy
+name|deletionPolicy
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+return|return
+name|open
+argument_list|(
+name|commit
+operator|.
+name|getDirectory
+argument_list|()
+argument_list|,
+literal|false
+argument_list|,
+name|deletionPolicy
+argument_list|,
+name|commit
 argument_list|)
 return|;
 block|}
@@ -581,6 +656,10 @@ parameter_list|,
 specifier|final
 name|IndexDeletionPolicy
 name|deletionPolicy
+parameter_list|,
+specifier|final
+name|IndexCommit
+name|commit
 parameter_list|)
 throws|throws
 name|CorruptIndexException
@@ -597,6 +676,8 @@ argument_list|,
 name|closeDirectory
 argument_list|,
 name|deletionPolicy
+argument_list|,
+name|commit
 argument_list|)
 return|;
 block|}
@@ -2278,6 +2359,28 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
+block|}
+comment|/** Returns all commit points that exist in the Directory.    *  Normally, because the default is {@link    *  KeepOnlyLastCommitDeletionPolicy}, there would be only    *  one commit point.  But if you're using a custom {@link    *  DeletionPolicy} then there could be many commits.    *  Once you have a given commit, you can open a reader on    *  it by calling {@link IndexReader#open(Directory,    *  IndexCommit)}.  There must be at least one commit in    *  the Directory, else this method throws {@link    *  java.io.IOException}.  Note that if a commit is in    *  progress while this method is running, that commit    *  may or may not be returned array.  */
+DECL|method|listCommits
+specifier|public
+specifier|static
+name|Collection
+name|listCommits
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|DirectoryIndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+return|;
 block|}
 block|}
 end_class
